# mini-functions

./: .gitignore  CHANGELOG.md  COPYRIGHT  Cargo.toml  Cross.toml  LICENSE-Apache  README.md  TEMPLATE.md  TODO.md  build.rs
.github/: CODEOWNERS  CONTRIBUTING.md
.github/ci/: build-deb  macos-install-packages.sh  ubuntu-install-packages.sh
.github/workflows/: build.yml  clippy.yml  fmt.yml  lints.yml  release.yml  rust-clippy.yml  rust.yml  rustfmt.yml  weekly.yml
cclm/: Cargo.toml  README.md
cclm/benches/: cclm.rs
cclm/examples/: cclm.rs
cclm/src/: lib.rs
cclm/tests/: claims.rs
ci/: ubuntu-install-packages
cjwt/: Cargo.toml  README.md
cjwt/benches/: cjwt.rs
cjwt/examples/: cjwt.rs
cjwt/src/: lib.rs
cjwt/tests/: cjwt.rs
claims/: Cargo.toml
claims/bench/: Cargo.toml
claims/benches/: Cargo.toml.old  claims.rs  lib.rs
claims/benches/data/: mini-functions-huge.txt
claims/examples/: claims.rs
claims/src/: lib.rs
claims/tests/: claims.rs
cmn/: Cargo.toml  README.md
cmn/benches/: cmn.rs
cmn/examples/: cmn.rs
cmn/src/: lib.rs  words.rs
cmn/tests/: common.rs  constants.rs  words.rs
common/: Cargo.toml
common/benches/: common.rs
common/data/: mini-functions-small.txt  mini-functions-tiny.txt
common/examples/: common.rs
common/src/: constants.rs  inputs.rs  lib.rs  words.rs
common/tests/: common.rs  constants.rs  words.rs
date/: Cargo.toml
date/bench/: Cargo.toml
date/benches/: date.rs
date/examples/: date.rs
date/src/: lib.rs
date/tests/: date.rs
dtt/: Cargo.toml  README.md
dtt/benches/: dtt.rs
dtt/examples/: dtt.rs
dtt/src/: lib.rs
dtt/tests/: dtt.rs
errors/: Cargo.toml
errors/bench/: Cargo.toml
errors/examples/: errors.rs
errors/src/: common.rs  error.old  error.rs  jwt.rs  lib.rs  property.rs  stacktrace.rs  traits.rs
errors/tests/: common.rs  error.rs  jwt.rs  property.rs  stacktrace.rs  traits.rs
examples/: date.rs  example_claims.rs  example_constants.rs  example_date.rs  example_errors.rs  example_hash.rs  example_jwt.rs  example_logs.rs  example_md5.rs  example_qr.rs  example_random.rs  hash.rs  log.rs  password.rs  qrcode.rs  random.rs  uuid.rs
examples/date/: date.rs
examples/hash/: hash.rs
examples/log/: log.rs
examples/password/: password.rs
examples/qrcode/: qrcode.rs
examples/random/: random.rs
examples/uuid/: uuid.rs
games/: Cargo.toml
games/bench/: Cargo.toml
games/examples/: deck.rs
games/src/: lib.rs
games/tests/: deck.rs
hash/: Cargo.toml
hash/bench/: Cargo.toml
hash/benches/: hash.rs
hash/examples/: hash.rs
hash/src/: lib.rs
hash/tests/: hash.rs
hsh/: Cargo.toml  README.md
hsh/benches/: hsh.rs
hsh/examples/: hsh.rs
hsh/src/: lib.rs
hsh/tests/: hsh.rs
idk/: Cargo.toml  README.md
idk/examples/: idk.rs
idk/src/: lib.rs
idk/tests/: common.rs  error.rs  jwt.rs  property.rs  stacktrace.rs  traits.rs
jot/: Cargo.toml
jot/bench/: Cargo.toml
jot/benches/: jot.rs
jot/examples/: jot.rs
jot/src/: lib.rs
jot/tests/: jot.rs
logger/: Cargo.toml
logger/bench/: Cargo.toml
logger/benches/: logger.rs
logger/examples/: logger.rs
logger/src/: lib.rs
logger/tests/: logger.rs
md5/: Cargo.toml  update.txt
md5/bench/: Cargo.toml
md5/benches/: md5.rs
md5/examples/: md5.rs
md5/src/: constants.rs  digest.rs  lib.rs  params.rs
md5/tests/: constants.rs  digest.rs  lib.rs  md5.rs  params.rs
mdg/: Cargo.toml  README.md  tarpaulin-report.html
mdg/benches/: mdg.rs
mdg/examples/: mdg.rs
mdg/src/: digest.rs  lib.rs  params.rs
mdg/tests/: constants.rs  digest.rs  lib.rs  params.rs
mini-functions/: Cargo.toml
mini-functions-common/: constant.rs  words.rs
mini-functions-date/: Cargo.toml
mini-functions-date/examples/: date.rs
mini-functions-date/src/: lib.rs
mini-functions-date/tests/: date.rs
mini-functions-games/: Cargo.toml
mini-functions-games/examples/: deck.rs
mini-functions-games/src/: lib.rs
mini-functions-games/tests/: deck.rs
mini-functions-hash/: Cargo.toml
mini-functions-hash/examples/: hash.rs
mini-functions-hash/src/: lib.rs
mini-functions-hash/tests/: hash.rs
mini-functions-jwt/: Cargo.toml
mini-functions-jwt-claims/: Cargo.toml
mini-functions-jwt-claims/examples/: claims.rs
mini-functions-jwt-claims/src/: lib.rs
mini-functions-jwt-claims/tests/: claims.rs
mini-functions-jwt-errors/: Cargo.toml
mini-functions-jwt-errors/src/: lib.rs
mini-functions-jwt/examples/: jwt.rs
mini-functions-jwt/src/: lib.rs
mini-functions-jwt/tests/: code.old  jwt.rs
mini-functions-log/: Cargo.toml
mini-functions-log/examples/: log.rs
mini-functions-log/src/: lib.rs
mini-functions-log/tests/: log.rs
mini-functions-password/: mod.rs  password.rs
mini-functions-qrcode/: Cargo.toml  qrcode.rs
mini-functions-qrcode/examples/: qrcode.rs
mini-functions-random/: Cargo.toml
mini-functions/src/: lib.rs
password/: Cargo.toml
password/benches/: password.rs
password/examples/: password.rs
password/src/: lib.rs
password/tests/: password.rs
psph/: Cargo.toml  README.md
pwd/: Cargo.toml
pwd/benches/: pwd.rs
pwd/examples/: pwd.rs
pwd/src/: lib.rs
pwd/tests/: pwd.rs
qr/: Cargo.toml
qr/bench/: Cargo.toml
qr/benches/: qr.rs
qr/examples/: qr.rs
qr/src/: lib.rs
qr/tests/: qr.rs
qrc/: Cargo.toml  README.md
qrc/benches/: qrc.rs
qrc/examples/: qrc.rs
qrc/src/: lib.rs
qrc/tests/: qr.rs
random/: .rustc_info.json  Cargo.toml
random/bench/: Cargo.toml
random/benches/: random.rs
random/examples/: random.rs
random/src/: lib.rs
random/tests/: random.rs
rlg/: Cargo.toml  README.md
rlg/benches/: rlg.rs
rlg/examples/: rlg.rs
rlg/src/: lib.rs
rlg/tests/: rlg.rs
src/: claims.rs  common.rs  date.rs  errors.rs  hash.rs  jwt.rs  lib.rs  log.rs  logs.rs  md5.rs  password.rs  qr.rs  qrcode.rs  random.rs  uuid.rs
tests/: date.rs  hash.rs  log.rs  main.rs  password.rs  qrcode.rs  random.rs  uuid.rs
vrd/: .rustc_info.json  Cargo.toml  README.md
vrd/benches/: vrd.rs
vrd/examples/: vrd.rs
vrd/src/: lib.rs
vrd/tests/: vrd.rs
(+31 files in other folders)
