[package]
authors = ["Sebastien Rousseau"]
categories = ["development-tools", "parsing", "randomness", "security", "time"]
description = "A Rust library of highly performant utility and wrapper functions"
documentation = "https://docs.rs/mini-functions"
edition = "2021"
homepage = "https://minifunctions.com"
include = [
    "/build.rs",
    "/Cargo.toml",
    "/claims/**",
    "/common/**",
    "/date/**",
    "/errors/**",
    "/hash/**",
    "/jot/**",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/logger/**",
    "/md5/**",
    "/password/**",
    "/qr/**",
    "/random/**",
    "/README.md",
    "/src/**",
    "/tests/**",
]
keywords = [
    "barcode",
    "checksum",
    "claims",
    "cryptography",
    "date",
    "datetime",
    "debugging",
    "digest",
    "encoding",
    "encryption",
    "error-handling",
    "error",
    "exception-handling",
    "exception",
    "functions",
    "handling",
    "hash",
    "hashing",
    "helper",
    "jot",
    "json",
    "jwt",
    "libraries",
    "log",
    "logger",
    "logging",
    "mini-functions",
    "password-generator",
    "password",
    "passwords",
    "pseudo-random",
    "qr",
    "qrcode",
    "random-generation",
    "random-number",
    "random",
    "security",
    "time",
    "toolkit",
    "tracing",
    "utilities",
]
license = "Apache-2.0 OR MIT"
name = "mini-functions"
readme = "README.md"
repository = "https://github.com/sebastienrousseau/mini-functions.git"
rust-version = "1.67.0"
version = "0.0.8"

[dependencies]
claims = { path = "./claims", version = "*" }
common = { path = "./common", version = "*" }
date = { path = "./date", version = "*" }
errors = { path = "./errors", version = "*" }
hash = { path = "./hash", version = "*" }
jot = { path = "./jot", version = "*" }
logger = { path = "./logger", version = "*" }
md5 = { path = "./md5", version = "*" }
password = { path = "./password", version = "*" }
qr = { path = "./qr", version = "*" }
random = { path = "./random", version = "*" }

[workspace]
exclude = ["src"]
resolver = "2"
members = [
    "claims",
    "common",
    "date",
    "errors",
    "hash",
    "jot",
    "logger",
    "md5",
    "password",
    "qr",
    "random",
] # List of workspace members

[workspace.package]
rust-version = "1.67.0"

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["lib"]
path = "src/lib.rs"
required-features = [
    "claims",
    "common",
    "date",
    "errors",
    "hash",
    "jot",
    "logger",
    "md5",
    "password",
    "qr",
    "random",
]

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false
strip = false

[profile.release]
codegen-units = 1        # Compile crates one after another so the compiler can optimize better
debug = false            # Disable debug information
debug-assertions = false # Disable debug assertions
incremental = false      # Disable incremental compilation
lto = true               # Enables link to optimizations
opt-level = "s"          # Optimize for binary size
overflow-checks = false  # Disable overflow checks
panic = "abort"          # Strip expensive panic clean-up logic
rpath = false            # Disable rpath
strip = "symbols"        # Automatically strip symbols from the binary.

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
strip = false
