[package]
authors = ["Sebastien Rousseau"]
categories = ["development-tools", "parsing", "randomness", "security", "time"]
description = "A Rust library of highly performant utility and wrapper functions"
documentation = "https://docs.rs/mini-functions"
edition = "2021"
homepage = "https://minifunctions.com"
include = [
    "/build.rs",
    "/Cargo.toml",
    "/cclm/**",
    "/cmn/**",
    "/dtt/**",
    "/idk/**",
    "/hsh/**",
    "/cjwt/**",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/rlg/**",
    "/mdg/**",
    "/pwd/**",
    "/qrc/**",
    "/vrd/**",
    "/README.md",
    "/src/**",
    "/tests/**",
]
keywords = [
    "barcode",
    "checksum",
    "cclm",
    "cryptography",
    "cmn",
    "dtt",
    "date",
    "datetime",
    "debugging",
    "digest",
    "encoding",
    "encryption",
    "error-handling",
    "error",
    "exception-handling",
    "exception",
    "functions",
    "handling",
    "hsh",
    "hash",
    "hashing",
    "helper",
    "cjwt",
    "json",
    "jwt",
    "libraries",
    "log",
    "rlg",
    "logging",
    "mini-functions",
    "pwd",
    "password-generator",
    "password",
    "passwords",
    "pseudo-random",
    "qr",
    "qrc",
    "qrcode",
    "vrd",
    "random-generation",
    "random-number",
    "random",
    "security",
    "time",
    "toolkit",
    "tracing",
    "utilities",
]
license = "Apache-2.0 OR MIT"
name = "mini-functions"
readme = "README.md"
repository = "https://github.com/sebastienrousseau/mini-functions.git"
rust-version = "1.67"
version = "0.0.8"

[dependencies]
cclm = { path = "./cclm", version = "*" }
cmn = { path = "./cmn", version = "*" }
dtt = { path = "./dtt", version = "*" }
idk = { path = "./idk", version = "*" }
hsh = { path = "./hsh", version = "*" }
cjwt = { path = "./cjwt", version = "*" }
rlg = { path = "./rlg", version = "*" }
mdg = { path = "./mdg", version = "*" }
psph = { path = "./psph", version = "*" }
qrc = { path = "./qrc", version = "*" }
vrd = { path = "./vrd", version = "*" }

[workspace]
exclude = ["src"]
resolver = "2"
members = [
    "cclm",
    "cmn",
    "dtt",
    "idk",
    "hsh",
    "cjwt",
    "rlg",
    "mdg",
    "psph",
    "qrc",
    "vrd",
] # List of workspace members

[workspace.package]
rust-version = "1.67"

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["lib"]
path = "src/lib.rs"
required-features = [
    "cclm",
    "cmn",
    "dtt",
    "idk",
    "hsh",
    "cjwt",
    "rlg",
    "mdg",
    "psph",
    "qrc",
    "vrd",
]

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false
strip = false

[profile.release]
codegen-units = 1        # Compile crates one after another so the compiler can optimize better
debug = false            # Disable debug information
debug-assertions = false # Disable debug assertions
incremental = false      # Disable incremental compilation
lto = true               # Enables link to optimizations
opt-level = "s"          # Optimize for binary size
overflow-checks = false  # Disable overflow checks
panic = "abort"          # Strip expensive panic clean-up logic
rpath = false            # Disable rpath
strip = "symbols"        # Automatically strip symbols from the binary.

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
strip = false
