[package]
authors = ["The minifunctions contributors <contact@minifunctions.com>"]
build = "build.rs"
categories = ["development-tools", "parsing", "value-formatting", "algorithms", "date-and-time"]
description = "A Rust library of highly performant utility and wrapper functions"
documentation = "https://docs.rs/mini-functions"
edition = "2021"
exclude = [
    "/.git/*",
    "/.github/*",
    "/.gitignore",
    "/.vscode/*"
]
homepage = "https://minifunctions.com"
include = [
    "/build.rs",
    "/Cargo.toml",
    "/cclm/**",
    "/cjwt/**",
    "/idk/**",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/mdg/**",
    "/README.md",
    "/src/**",
    "/tests/**",
]
keywords = [
    "libraries",
    "mini-functions",
    "toolkit",
    "utilities",
    "functions",
]
license = "Apache-2.0 OR MIT"
name = "mini-functions"
readme = "README.md"
repository = "https://github.com/sebastienrousseau/mini-functions.git"
rust-version = "1.71.1"
version = "0.0.10"

[dependencies]
cclm = "0.0.1"
cjwt = "0.0.1"
cmn = "0.0.3"
dtt = "0.0.5"
hsh = "0.0.7"
idk = "0.0.1"
mdg = "0.0.1"
qrc = "0.0.5"
rlg = "0.0.2"
vrd = "0.0.5"
serde_json = "1.0.108"
image = "0.25.0"

[workspace]
exclude = ["src"]
resolver = "2"
members = [
    "cclm",
    "cjwt",
    "idk",
    "mdg",
] # List of workspace members

[workspace.package]
rust-version = "1.71.1"

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["lib"]
path = "src/lib.rs"
required-features = [
    "cclm",
    "cmn",
    "dtt",
    "idk",
    "hsh",
    "cjwt",
    "rlg",
    "mdg",
    "qrc",
]

[profile.dev]
codegen-units = 4
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false
strip = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = "s"
overflow-checks = false
panic = "abort"
rpath = false
strip = "symbols"

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
strip = false
