[package]
authors = ["Sebastian Rousseau <sebastian.rousseau@gmail.com"]
categories = [
    "Authentication",
    "Cryptography",
    "Development tools",
    "WebAssembly",
    "Webprogramming",
]
description = "The `Claims` library holds JSON Web Token (JWT) cclm. It provides an RFC7519 compliant implementation of JSON Web Tokens (JWT) and JSON Web Signature (JWS) for Rust."
edition = "2021"
homepage = "https://minifunctions.com/"
keywords = ["authorization", "cclm", "mini-functions", "security", "token"]
license = "MIT OR Apache-2.0"
name = "cclm"
repository = "https://github.com/sebastienrousseau/mini-functions/tree/main/cclm/"
rust-version = "1.67"
version = "0.0.1"
include = [
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/examples/**",
    "/README.md",
    "/src/**",
    "/tests/**",
]

[[bench]]
name = "cclm"
harness = false
path = "benches/cclm.rs"

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }

[dev-dependencies]
criterion = "0.5.1"
dtt = "0.0.5"

[lib]
crate-type = ["lib"]
name = "cclm"
path = "src/lib.rs"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
