[package]
authors = ["Sebastian Rousseau <sebastian.rousseau@gmail.com"]
categories = [
    "Authentication",
    "Cryptography",
    "Development tools",
    "Encoding",
    "Web programming",
]
description = "A Rust library for working with JSON Web Tokens (JWTs) and JSON Web Signatures (JWSs)"
edition = "2021"
homepage = "https://minifunctions.com/"
keywords = ["api", "cjwt", "json", "jws", "jwt"]
license = "MIT OR Apache-2.0"
name = "cjwt"
repository = "https://github.com/sebastienrousseau/mini-functions/tree/main/cjwt/"
rust-version = "1.66.1"
version = "0.0.1"
include = [
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/examples/**",
    "/README.md",
    "/src/**",
    "/tests/**",
]

[[bench]]
name = "cjwt"
harness = false
path = "benches/cjwt.rs"

[dependencies]
base64 = "0.21.5"
cclm = "0.0.1"
dtt = "0.0.5"
hmac = "0.12.1"
idk = "0.0.1"
jwt = "0.16.0"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
sha2 = "0.10.8"

[dev-dependencies]
criterion = "0.5.1"

[lib]
crate-type = ["lib"]
name = "cjwt"
path = "src/lib.rs"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
