[package]
authors = ["Sebastian Rousseau <sebastian.rousseau@gmail.com"]
categories = ["Authentication", "Cryptography", "Development tools", "WebAssembly", "Webprogramming"]
description = "`Claims` is a struct that holds the claims defined in the RFC 7519, encoded as JSON object in JWS/JWE, allowing digital signing/integrity protection and/or encryption."
edition = "2018"
homepage = "https://minifunctions.com/"
keywords = ["claims", "jwt", "mini-functions", "token", "web"]
license = "MIT OR Apache-2.0"
name = "claims"
repository = "https://github.com/sebastienrousseau/mini-functions/tree/main/claims/"
version = "0.0.1"
include = [
    # "/build.rs",
    "/Cargo.toml",
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
    "/README.md",
    "/benches/**",
    "/src/**",
    "/tests/**",
    "/examples/**",
]

[[bench]]
name = "claims"
harness = false
path = "benches/claims.rs"

[dependencies]
date = { path = "../date" }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

[dev-dependencies]
criterion = "0.4.0"

[lib]
crate-type = ["lib"]
name = "claims"
path = "src/lib.rs"

[features]
default = []

[package.metadata.docs.rs]
all-features = true

# [profile.dev]
# codegen-units = 256
# debug = true
# debug-assertions = true
# incremental = true
# lto = false
# opt-level = 0
# overflow-checks = true
# panic = 'unwind'
# rpath = false
# strip = false

# [profile.release]
# codegen-units = 1 # Compile crates one after another so the compiler can optimize better
# debug = false # Disable debug information
# debug-assertions = false # Disable debug assertions
# incremental = false # Disable incremental compilation
# lto = true # Enables link to optimizations
# opt-level = "s" # Optimize for binary size
# overflow-checks = false # Disable overflow checks
# panic = "abort" # Strip expensive panic clean-up logic
# rpath = false # Disable rpath
# strip = "symbols"  # Automatically strip symbols from the binary.

# [profile.test]
# codegen-units = 256
# debug = true
# debug-assertions = true
# incremental = true
# lto = false
# opt-level = 0
# overflow-checks = true
# rpath = false
# strip = false