[package]
authors = ["Sebastian Rousseau <sebastian.rousseau@gmail.com"]
categories = ["Configuration"]
description = "A Rust library for accessing a collection of mathematical and cryptographic constants"
edition = "2021"
homepage = "https://minifunctions.com/"
keywords = ["cmn", "common", "config", "configurations", "constants"]
license = "MIT OR Apache-2.0"
name = "cmn"
repository = "https://github.com/sebastienrousseau/mini-functions/tree/main/cmn/"
rust-version = "1.67.0"
version = "0.0.1"
include = [
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/examples/**",
    "/README.md",
    "/src/**",
    "/tests/**",
]

[[bench]]
name = "cmn"
harness = false
path = "benches/cmn.rs"

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }

[dev-dependencies]
criterion = "0.4.0"

[lib]
crate-type = ["lib"]
name = "cmn"
path = "src/lib.rs"

[features]
default = []

[package.metadata.docs.rs]
all-features = true

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false
strip = false

[profile.release]
codegen-units = 1        # Compile crates one after another so the compiler can optimize better
debug = false            # Disable debug information
debug-assertions = false # Disable debug assertions
incremental = false      # Disable incremental compilation
lto = true               # Enables link to optimizations
opt-level = "s"          # Optimize for binary size
overflow-checks = false  # Disable overflow checks
panic = "abort"          # Strip expensive panic clean-up logic
rpath = false            # Disable rpath
strip = "symbols"        # Automatically strip symbols from the binary.

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
strip = false
