[package]
authors = ["Sebastian Rousseau <sebastian.rousseau@gmail.com"]
categories = ["Date and time"]
description = "A Rust library for parsing, validating, manipulating, and formatting dates and times."
edition = "2018"
homepage = "https://minifunctions.com/"
keywords = ["dtt", "date", "datetime", "time", "timezone"]
license = "MIT OR Apache-2.0"
name = "dtt"
repository = "https://github.com/sebastienrousseau/mini-functions/tree/main/dtt/"
rust-version = "1.67.0"
version = "0.0.1"
include = [
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/examples/**",
    "/README.md",
    "/src/**",
    "/tests/**",
]

[[bench]]
name = "dtt"
harness = false
path = "benches/dtt.rs"

[dependencies]
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
time = "0.3.17"

[dev-dependencies]
criterion = "0.4.0"

[lib]
crate-type = ["lib"]
name = "dtt"
path = "src/lib.rs"

[features]
default = []

[package.metadata.docs.rs]
all-features = true

# [profile.dev]
# codegen-units = 256
# debug = true
# debug-assertions = true
# incremental = true
# lto = false
# opt-level = 0
# overflow-checks = true
# panic = 'unwind'
# rpath = false
# strip = false

# [profile.release]
# codegen-units = 1 # Compile crates one after another so the compiler can optimize better
# debug = false # Disable debug information
# debug-assertions = false # Disable debug assertions
# incremental = false # Disable incremental compilation
# lto = true # Enables link to optimizations
# opt-level = "s" # Optimize for binary size
# overflow-checks = false # Disable overflow checks
# panic = "abort" # Strip expensive panic clean-up logic
# rpath = false # Disable rpath
# strip = "symbols"  # Automatically strip symbols from the binary.

# [profile.test]
# codegen-units = 256
# debug = true
# debug-assertions = true
# incremental = true
# lto = false
# opt-level = 0
# overflow-checks = true
# rpath = false
# strip = false
