[package]
authors = ["Sebastian Rousseau <sebastian.rousseau@gmail.com"]
categories = [
    "Authentication",
    "Cryptography",
    "Datastructures",
    "Developmenttools",
    "Encoding",
    "Rustpatterns",
    "Valueformatting",
    "WebAssembly",
    "Webprogramming",
]
description = "Errors is a library that provides a set of error types for working with JSON Web Tokens (JWTs) and JSON Web Signatures (JWSs)."
edition = "2018"
homepage = "https://minifunctions.com/"
keywords = ["error-handling", "error", "failure", "macro", "mini-functions"]
license = "MIT OR Apache-2.0"
name = "errors"
repository = "https://github.com/sebastienrousseau/mini-functions/tree/main/errors/"
version = "0.0.1"
include = [
    "/build.rs",
    "/Cargo.toml",
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/mini-functions*/**",
    "/tests/**",
    "/examples/**",
]

[dependencies]
base64 = "0.21.0"
jwt = "0.16.0"
jsonwebtoken = "8.2.0"
# openssl = "0.10.45"
serde_derive = "1.0.152"
sha2 = "0.10.6"
hmac = "0.12.1"
serde = "1.0.152"
serde_json = "1.0.91"

[dev-dependencies]
criterion = "0.4.0"

[lib]
crate-type = ["lib"]
name = "errors"
path = "src/lib.rs"

[features]
default = []

[package.metadata.docs.rs]
all-features = true

# [profile.dev]
# codegen-units = 256
# debug = true
# debug-assertions = true
# incremental = true
# lto = false
# opt-level = 0
# overflow-checks = true
# panic = 'unwind'
# rpath = false
# strip = false

# [profile.release]
# codegen-units = 1 # Compile crates one after another so the compiler can optimize better
# debug = false # Disable debug information
# debug-assertions = false # Disable debug assertions
# incremental = false # Disable incremental compilation
# lto = true # Enables link to optimizations
# opt-level = "s" # Optimize for binary size
# overflow-checks = false # Disable overflow checks
# panic = "abort" # Strip expensive panic clean-up logic
# rpath = false # Disable rpath
# strip = "symbols"  # Automatically strip symbols from the binary.

# [profile.test]
# codegen-units = 256
# debug = true
# debug-assertions = true
# incremental = true
# lto = false
# opt-level = 0
# overflow-checks = true
# rpath = false
# strip = false
