[package]
authors = ["Sebastian Rousseau <sebastian.rousseau@gmail.com"]
categories = [
    "Authentication",
    "Cryptography",
    "Datastructures",
    "Developmenttools",
    "Encoding",
]
description = "A Rust library for managing errors and exceptions"
edition = "2021"
homepage = "https://minifunctions.com/"
keywords = ["idk", "error-handling", "error", "exception-handling", "failure"]
license = "MIT OR Apache-2.0"
name = "idk"
repository = "https://github.com/sebastienrousseau/mini-functions/tree/main/errors/"
rust-version = "1.66.1"
version = "0.0.1"
include = [
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/examples/**",
    "/README.md",
    "/src/**",
    "/tests/**",
]

[dependencies]
base64 = "0.21.0"
hmac = "0.12.1"
jsonwebtoken = "8.2.0"
jwt = "0.16.0"
once_cell = "1.17.0"
serde = { version = "1.0.152", features = ["derive"] }
# openssl = "0.10.45"
serde_derive = "1.0.152"
serde_json = "1.0.91"
sha2 = "0.10.6"

[dev-dependencies]
criterion = "0.4.0"

[lib]
crate-type = ["lib"]
name = "idk"
path = "src/lib.rs"

[features]
default = []

[package.metadata.docs.rs]
all-features = true

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false
strip = false

[profile.release]
codegen-units = 1        # Compile crates one after another so the compiler can optimize better
debug = false            # Disable debug information
debug-assertions = false # Disable debug assertions
incremental = false      # Disable incremental compilation
lto = true               # Enables link to optimizations
opt-level = "s"          # Optimize for binary size
overflow-checks = false  # Disable overflow checks
panic = "abort"          # Strip expensive panic clean-up logic
rpath = false            # Disable rpath
strip = "symbols"        # Automatically strip symbols from the binary.

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
strip = false
