[package]
authors = ["Sebastian Rousseau <sebastian.rousseau@gmail.com"]
categories = [
    "authentication",
    "cryptography",
    "data-structures",
    "development-tools",
    "encoding",
]
description = "A Rust library for managing errors and exceptions"
edition = "2021"
homepage = "https://minifunctions.com/"
keywords = ["idk", "error-handling", "error", "exception-handling", "failure"]
license = "MIT OR Apache-2.0"
name = "idk"
repository = "https://github.com/sebastienrousseau/mini-functions/tree/main/errors/"
rust-version = "1.66.1"
version = "0.0.1"
include = [
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/examples/**",
    "/README.md",
    "/src/**",
    "/tests/**",
]

[dependencies]
base64 = "0.21.5"
hmac = "0.12.1"
jwt = "0.16.0"
serde_json = "1.0.108"

[dev-dependencies]
criterion = "0.5.1"

[lib]
crate-type = ["lib"]
name = "idk"
path = "src/lib.rs"

[features]
default = []

[package.metadata.docs.rs]
all-features = true
