[package]
authors = ["Sebastian Rousseau <sebastian.rousseau@gmail.com"]
categories = ["Asynchronous", "Debugging", "Development tools"]
description = "Log provides an easy way to log a message to the console with a simple, readable output format."
edition = "2018"
homepage = "https://minifunctions.com/"
keywords = ["async", "log", "logger", "logging", "mini-functions", "tracing"]
license = "MIT OR Apache-2.0"
name = "logger"
repository = "https://github.com/sebastienrousseau/mini-functions/tree/main/logger/"
version = "0.0.1"
include = [
    "/build.rs",
    "/Cargo.toml",
    "../../LICENSE-APACHE",
    "../../LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/tests/**",
    "/examples/**",
]

[dependencies]
date = { path = "../date" }

[dev-dependencies]
criterion = "0.4.0"

[lib]
crate-type = ["lib"]
name = "logger"
path = "src/lib.rs"

[features]
default = []

[package.metadata.docs.rs]
all-features = true

# [profile.dev]
# codegen-units = 256
# debug = true
# debug-assertions = true
# incremental = true
# lto = false
# opt-level = 0
# overflow-checks = true
# panic = 'unwind'
# rpath = false
# strip = false

# [profile.release]
# codegen-units = 1 # Compile crates one after another so the compiler can optimize better
# debug = false # Disable debug information
# debug-assertions = false # Disable debug assertions
# incremental = false # Disable incremental compilation
# lto = true # Enables link to optimizations
# opt-level = "s" # Optimize for binary size
# overflow-checks = false # Disable overflow checks
# panic = "abort" # Strip expensive panic clean-up logic
# rpath = false # Disable rpath
# strip = "symbols"  # Automatically strip symbols from the binary.

# [profile.test]
# codegen-units = 256
# debug = true
# debug-assertions = true
# incremental = true
# lto = false
# opt-level = 0
# overflow-checks = true
# rpath = false
# strip = false
